fix digital synapse mean calculation

--- a/synapse/DigitalSynapse_SNR.ipynb
+++ b/synapse/DigitalSynapse_SNR.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:927f1a53e1b651a6dee21dd45b23f5ffd28e2ba17745df534c5084e2ed805bad"
+  "signature": "sha256:4831e8ff5f4db13b7c1e68a1d04637d26516e811adfe8e141d2c024dcc59cc13"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -156,13 +156,13 @@
       "\\text{Area} = khT\\Delta t,\n",
       "$$\n",
       "\n",
-      "and we desire\n",
+      "and since we desire\n",
       "\n",
       "$$\n",
       "E[\\text{Area}] = 1,\n",
       "$$\n",
       "\n",
-      "so\n",
+      "we have \n",
       "\n",
       "\\begin{align}\n",
       "1 &= E\\left[khT\\Delta t\\right] \\\\\n",
@@ -228,7 +228,7 @@
       "Since\n",
       "\n",
       "$$\n",
-      "1-p = h\\Delta tk,\n",
+      "1-p = kh\\Delta t,\n",
       "$$\n",
       "\n",
       "$$\n",
@@ -255,36 +255,6 @@
       " 0 \\quad &\\text{otherwise.}\n",
       " \\end{cases}\n",
       "\\end{align}"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 3,
-     "metadata": {},
-     "source": [
-      "Stochastic digital synapse summary"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "The synapse parameters are given by\n",
-      "\n",
-      "\\begin{align}\n",
-      "p &= e^{-\\Delta t/\\tau} \\\\\n",
-      "h &= \\frac{1-e^{-\\Delta t/\\tau}}{k\\Delta t}\n",
-      "\\end{align}\n",
-      "\n",
-      "The distribution of the synapse impulse response is a binomial distribution given by \n",
-      "\n",
-      "$$\n",
-      "p_{D[n]}(d[n]) = \n",
-      " \\begin{cases}\n",
-      " \\binom{k}{d[n]}(p^n)^{d[n]}(1-p^n)^{k-d[n]} \\quad &\\text{for } d[n]\\in\\{0,\\ldots,k\\}\\\\\n",
-      " 0 \\quad &\\text{otherwise.}\n",
-      " \\end{cases}\n",
-      "$$"
      ]
     },
     {
@@ -490,25 +460,25 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Consider from the perspective of a point in time of the synapse. Each spike that arrives $n_i$ before the current time contributes $X[n_i]$ to the current value of the synapse independent of any other spike. For $N$ spikes that arrived prior to the current time, the value of the synapse is\n",
+      "Consider from the perspective of a point in time of the synapse. Each spike that arrives $n_i$ time steps before the current time contributes $D[n_i]$ to the current value of the synapse independent of any other spike. For $N$ spikes that arrived prior to the current time, the value of the synapse is\n",
       "\n",
       "$$\n",
-      "S = h\\sum_{i=1}^{N}X[n_i].\n",
+      "S = h\\sum_{i=1}^{N}D[n_i].\n",
       "$$\n",
       "\n",
       "The synapse mean will then be given by\n",
       "\n",
       "\\begin{align}\n",
-      "E[S] &= E\\left[h\\sum_{i=1}^{N}X[n_i]\\right] \\\\\n",
-      " &= hE\\left[\\sum_{i=1}^{N}X[n_i]\\right] \\\\\n",
-      " &= hE\\left[E\\left[\\sum_{i=1}^{N}X[n_i]\\bigg|N\\right]\\right] \\\\\n",
-      " &= hE\\left[\\sum_{i=1}^{N}E\\left[X[n_i]\\bigg|N\\right]\\right] \\\\\n",
-      " &= hE\\left[\\sum_{i=1}^{N}E\\left[X[n_i]\\right]\\right] \\\\\n",
-      " &= hE\\left[\\sum_{i=1}^{N}1\\right]E\\left[X[n_i]\\right] \\\\\n",
-      " &= hE[N]\\ E[X[n_i]] \\\\\n",
-      " &= hE[N]\\ E\\left[E\\left[X[n_i]\\bigg|n_i\\right]\\right] \\\\\n",
-      " &= hE[N]\\ E\\left[k(1-p)^{n_i}\\right] \\\\\n",
-      " &= hkE[N]\\ E\\left[(1-p)^{n_i}\\right] \\\\\n",
+      "E[S] &= E\\left[h\\sum_{i=1}^{N}D[n_i]\\right] \\\\\n",
+      " &= hE\\left[\\sum_{i=1}^{N}D[n_i]\\right] \\\\\n",
+      " &= hE\\left[E\\left[\\sum_{i=1}^{N}D[n_i]\\bigg|N\\right]\\right] \\\\\n",
+      " &= hE\\left[\\sum_{i=1}^{N}E\\left[D[n_i]\\bigg|N\\right]\\right] \\\\\n",
+      " &= hE\\left[\\sum_{i=1}^{N}E\\left[D[n_i]\\right]\\right] \\\\\n",
+      " &= hE\\left[\\sum_{i=1}^{N}1\\right]E\\left[D[n_i]\\right] \\\\\n",
+      " &= hE[N]\\ E[D[n_i]] \\\\\n",
+      " &= hE[N]\\ E\\left[E\\left[D[n_i]\\bigg|n_i\\right]\\right] \\\\\n",
+      " &= hE[N]\\ E\\left[kp^{n_i}\\right] \\\\\n",
+      " &= hkE[N]\\ E\\left[p^{n_i}\\right] \\\\\n",
       "\\end{align}\n",
       "\n"
      ]
@@ -517,11 +487,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Since the impulse response approximates a decaying exponential, it can take a very long time to reach $0$. To avoid considering all spikes since the beginning of time, we make the assumption that the impulse response is negligible after a certain time. That is, we only consider spikes within $m$ steps of the current time, where $m$ is an arbitrary, positive integer. The higher $m$ is, the further back in time we consider. As $N$ is the number of spikes from a Poisson spike train with rate $\\lambda$ received within $m\\Delta t$, $E[N]=\\lambda m\\Delta t$, so\n",
+      "To avoid considering all spikes since the beginning of time, we assume that the impulse response is negligible after a certain time. That is, we only consider spikes within $m$ steps (inclusive) of the current time, where $m$ is an arbitrary, positive integer. The higher $m$ is, the further back in time we consider. As $N$ is the number of spikes from a Poisson spike train with rate $\\lambda$ received within $(m+1)\\Delta t$, $E[N]=\\lambda (m+1)\\Delta t$, so\n",
       "\n",
       "\\begin{align}\n",
-      "E[S] &= hkE[N]E\\left[(1-p)^{n_i}\\right] \\\\\n",
-      " &= hk\\lambda m\\Delta tE\\left[(1-p)^{n_i}\\right]\n",
+      "E[S] &= hkE[N]E\\left[p^{n_i}\\right] \\\\\n",
+      " &= hk\\lambda (m+1)\\Delta tE\\left[p^{n_i}\\right]\n",
       "\\end{align}"
      ]
     },
@@ -529,21 +499,25 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The spike times within a time period are uniform for a Poisson spike train. With our discretization of time, $n_i$ is uniformly distributed on $[1, m]$, so\n",
+      "The spike times within a time period are uniform for a Poisson spike train. With our discretization of time, $n_i$ is uniformly distributed on $[0, m]$, so\n",
       "\n",
       "\\begin{align}\n",
-      "E\\left[(1-p)^{n_i}\\right] &= \\sum_{n_i=1}^{m}\\frac{1}{m}(1-p)^{n_i} \\\\\n",
-      " &= \\frac{1}{m}\\sum_{n_i=1}^{m}(1-p)^{n_i} \\\\\n",
-      " &= \\frac{1}{m}\\frac{(1-p)-(1-p)^{m+1}}{1-(1-p)} \\\\\n",
-      " &= \\frac{1}{m}\\frac{(1-p)-(1-p)^{m+1}}{p} \\\\\n",
+      "E\\left[p^{n_i}\\right] &= \\sum_{n_i=0}^{m}\\frac{1}{m+1}p^{n_i} \\\\\n",
+      " &= \\frac{1}{m+1}\\sum_{n_i=0}^{m}p^{n_i} \\\\\n",
+      " &= \\frac{1}{m+1}\\frac{1-p^{m+1}}{1-p} \\\\\n",
       "\\end{align}\n",
       "\n",
-      "and \n",
-      "\n",
+      "and "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "\\begin{align}\n",
-      "E[S] &= hk\\lambda m\\Delta tE\\left[(1-p)^{n_i}\\right]\\\\\n",
-      " &= hk\\lambda m\\Delta t\\frac{1}{m}\\frac{(1-p)-(1-p)^{m+1}}{p}\\\\\n",
-      " &= hk\\lambda \\Delta t\\frac{(1-p)-(1-p)^{m+1}}{p}.\\\\\n",
+      "E[S] &= hk\\lambda(m+1)\\Delta tE\\left[p^{n_i}\\right]\\\\\n",
+      " &= hk\\lambda(m+1)\\Delta t\\frac{1}{m+1}\\frac{1-p^{m+1}}{1-p}\\\\\n",
+      " &= hk\\lambda \\Delta t\\frac{1-p^{m+1}}{1-p}.\\\\\n",
       "\\end{align}"
      ]
     },
@@ -551,40 +525,22 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Substituting for $h$,\n",
+      "Substituting $1-p=kh\\Delta t$,\n",
       "\n",
       "\\begin{align}\n",
-      "E[S] &= \\frac{1-e^{-\\Delta t/\\tau}}{k\\Delta t}k\\lambda\\Delta t\\frac{(1-p)-(1-p)^{m+1}}{p} \\\\\n",
-      " &= \\left(1-e^{-\\Delta t/\\tau}\\right)\\lambda\\frac{(1-p)-(1-p)^{m+1}}{p}, \\\\\n",
+      "E[S] &= hk\\lambda \\Delta t\\frac{1-p^{m+1}}{1-p} \\\\\n",
+      " &= \\lambda(1-p)\\frac{1-p^{m+1}}{1-p} \\\\\n",
+      " &= \\lambda(1-p^{m+1}). \\\\\n",
       "\\end{align}\n",
       "\n",
-      "and substituting for $p$,\n",
+      "Taking the limit yields\n",
       "\n",
       "\\begin{align}\n",
-      "E[S] &= \\left(1-e^{-\\Delta t/\\tau}\\right)\\lambda\n",
-      "    \\frac{(1-p)-(1-p)^{m+1}}\n",
-      "         {\\left(1-e^{-\\Delta t/\\tau}\\right)}, \\\\\n",
-      " &= \\lambda\\left((1-p)-(1-p)^{m+1}\\right) \\\\\n",
-      " &= \\lambda\\left(\\left(1-\\left(1-e^{-\\Delta t/\\tau}\\right)\\right)-\n",
-      "                 \\left(1-\\left(1-e^{-\\Delta t/\\tau}\\right)\\right)^{m+1}\\right) \\\\ \n",
-      " &= \\lambda\\left(e^{-\\Delta t/\\tau}-\n",
-      "                 \\left(1-\\left(1-e^{-\\Delta t/\\tau}\\right)\\right)^{m+1}\\right) \\\\\n",
-      " &= \\lambda\\left(e^{-\\Delta t/\\tau}-\\left(e^{-\\Delta t/\\tau}\\right)^{m+1}\\right) \\\\\n",
-      " &= \\lambda\\left(e^{-\\Delta t/\\tau}-e^{-(m+1)\\Delta t/\\tau}\\right)\n",
-      "\\end{align}\n",
-      "\n",
-      "Taking the limits yields\n",
-      "\n",
-      "\\begin{align}\n",
-      "\\lim_{\\Delta t\\rightarrow 0}\\lim_{m\\rightarrow \\infty}E[S] &= \n",
-      "    \\lim_{\\Delta t\\rightarrow 0}\\lim_{m\\rightarrow \\infty}\\lambda\n",
-      "    \\left(e^{-\\Delta t/\\tau}-e^{-(m+1)\\Delta t/\\tau}\\right) \\\\\n",
-      " &= \\lim_{\\Delta t\\rightarrow 0}\\lambda\n",
-      "    \\left(e^{-\\Delta t/\\tau}-0\\right) \\\\\n",
+      "\\lim_{m\\rightarrow\\infty}E[s] &= \\lim_{m\\rightarrow\\infty}\\lambda(1-p^{m+1}) \\\\\n",
       " &= \\lambda\n",
       "\\end{align}\n",
       "\n",
-      "I'm not sure about the math in picking $\\lim_{m\\rightarrow \\infty}$ before $\\lim{\\Delta t\\rightarrow 0}$. Reversing the order of the limits yields $0$ instead of $\\lambda$. I talked to Ashok about this and it looks like we would need to prove something about the convergence in order to justify the math. I also need to double check my math because with non-zero $\\Delta t$, I would expect the area to be $\\lambda$, not $\\lambda e^{\\Delta t/\\tau}$, because we picked $h$ to preserve the area on of an impulse response on expectation...perhaps something is wrong in picking which time period I am considering spikes."
+      "as expected."
      ]
     },
     {
@@ -613,16 +569,6 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 1
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# "
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
