stochastic variance derivation

--- a/synapse/DigitalSynapse_SNR.ipynb
+++ b/synapse/DigitalSynapse_SNR.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4831e8ff5f4db13b7c1e68a1d04637d26516e811adfe8e141d2c024dcc59cc13"
+  "signature": "sha256:8f65bda2943c5a3ac2be9deea6c63251210eb5f081bdb7130de8b5d092cdb325"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -89,13 +89,8 @@
       " - $k$ - the number of channels\n",
       " - $p$ - the probability of an open channel remaining open\n",
       " \n",
-      "The user sets $\\Delta t$ and $k$. It is our job to determine $p$ and $h$ so that $h\\cdot D[n]$ approximates the continuous synapse equation described by $x(t)$."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
+      "The user sets $\\Delta t$ and $k$. It is our job to determine $p$ and $h$ so that $h\\cdot D[n]$ approximates the continuous synapse equation described by $x(t)$.\n",
+      "\n",
       "Each time the synapse receives a spike, $k$ channels open, so\n",
       "\n",
       "$$\n",
@@ -143,13 +138,8 @@
       "\n",
       "$$\n",
       "E[T] = \\frac{1}{1-p}.\n",
-      "$$"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
+      "$$\n",
+      "\n",
       "For, $k$ channels, the area for the impulse response is\n",
       "\n",
       "$$\n",
@@ -507,13 +497,8 @@
       " &= \\frac{1}{m+1}\\frac{1-p^{m+1}}{1-p} \\\\\n",
       "\\end{align}\n",
       "\n",
-      "and "
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
+      "and \n",
+      "\n",
       "\\begin{align}\n",
       "E[S] &= hk\\lambda(m+1)\\Delta tE\\left[p^{n_i}\\right]\\\\\n",
       " &= hk\\lambda(m+1)\\Delta t\\frac{1}{m+1}\\frac{1-p^{m+1}}{1-p}\\\\\n",
@@ -536,7 +521,7 @@
       "Taking the limit yields\n",
       "\n",
       "\\begin{align}\n",
-      "\\lim_{m\\rightarrow\\infty}E[s] &= \\lim_{m\\rightarrow\\infty}\\lambda(1-p^{m+1}) \\\\\n",
+      "\\lim_{m\\rightarrow\\infty}E[S] &= \\lim_{m\\rightarrow\\infty}\\lambda(1-p^{m+1}) \\\\\n",
       " &= \\lambda\n",
       "\\end{align}\n",
       "\n",
@@ -552,23 +537,120 @@
      ]
     },
     {
-     "cell_type": "heading",
-     "level": 2,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Stochastic digital synapse simulation"
+      "$$\n",
+      "\\text{var}(S)=E\\left[S^2\\right]-E[S]^2\n",
+      "$$\n",
+      "\n",
+      "We know $E[S]$, so we need to find $E\\left[S^2\\right]$\n",
+      "\n",
+      "\\begin{align}\n",
+      "E\\left[S^2\\right] &= E\\left[\\left(h\\sum_{i=1}^{N}D[n_i]\\right)^2\\right] \\\\\n",
+      " &= h^2E\\left[\\left(\\sum_{i=1}^{N}D[n_i]\\right)^2\\right] \\\\\n",
+      " &= h^2E\\left[(D[n_1]+D[n_2]+\\ldots+D[n_N])(D[n_1]+D[n_2]+\\ldots+D[n_N])\\right] \\\\ \n",
+      " &= h^2E\\left[\\sum_{i=1}^{N}D[n_i]^2+\\sum_{x=1}^{N}\\sum_{y=1,\\ y\\neq x}^{N}D[n_x]D[n_y]\\right] \\\\\n",
+      " &= h^2\\left(E\\left[\\sum_{i=1}^{N}D[n_i]^2\\right]+E\\left[\\sum_{x=1}^{N}\\sum_{y=1,\\ y\\neq x}^{N}D[n_x]D[n_y]\\right]\\right) \\\\\n",
+      " &= h^2\\left(E\\left[E\\left[\\sum_{i=1}^{N}D[n_i]^2\\bigg|N\\right]\\right]+\n",
+      "    E\\left[E\\left[\\sum_{x=1}^{N}\\sum_{y=1,\\ y\\neq x}^{N}D[n_x]D[n_y]\\bigg|N\\right]\\right]\\right) \\\\\n",
+      " &= h^2\\left(E[N]E\\left[D[n_i]^2\\right] + E\\left[N^2-N\\right]E[D[n_x]D[n_y]]\\right) \\\\\n",
+      " &= h^2\\left(E[N]E\\left[E\\left[D[n_i]^2\\bigg|n_i\\right]\\right] + \n",
+      "    \\left(E\\left[N^2\\right]-\n",
+      "    E[N]\\right)E\\left[E\\left[D[n_x]\\bigg|n_x\\right]\\right]E\\left[E\\left[D[n_y]\\bigg|n_y\\right]\\right]\\right) \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "As before, we first assume that we only consider spikes received $m$ since time intervals ago and we assume that spikes arrive as a Poisson process with rate $\\lambda$. \n",
+      "\n",
+      "Therefore, $E[N]=\\text{var}(N)=\\lambda(m+1)\\Delta t$, and $E[N^2]=\\lambda(m+1)\\Delta t+(\\lambda(m+1)\\Delta t)^2$. \n",
+      "\n",
+      "In addition, $E\\left[D[n]\\bigg|n\\right]=kp^{n}$ and $E\\left[D[n]^2\\bigg|n\\right]=(k^2-k)p^{2n}+kp^n$, so"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "\\begin{align}\n",
+      "E\\left[S^2\\right] &= h^2\\left(E[N]E\\left[E\\left[D[n_i]^2\\bigg|n_i\\right]\\right] + \n",
+      "    \\left(E\\left[N^2\\right]-\n",
+      "    E[N]\\right)E\\left[E\\left[D[n_x]\\bigg|n_x\\right]\\right]E\\left[E\\left[D[n_y]\\bigg|n_y\\right]\\right]\\right) \\\\\n",
+      " &= h^2\\left(\\lambda(m+1)\\Delta tE\\left[(k^2-k)p^{2n_i}+kp^{n_i}\\right] + \n",
+      "    \\left(\\lambda(m+1)\\Delta t\\right)^2E\\left[kp^{n_x}\\right]E\\left[kp^{n_y}\\right]\\right) \\\\\n",
+      " &= h^2\\left(\\lambda(m+1)\\Delta tE\\left[(k^2-k)p^{2n_i}+kp^{n_i}\\right] + \n",
+      "    \\left(\\lambda(m+1)\\Delta t\\right)^2\\left(\\frac{k}{m+1}\\frac{1-p^{m+1}}{1-p}\\right)^2\\right) \\\\\n",
+      " &= h^2\\left(\\lambda(m+1)\\Delta t\\left(\\frac{k^2-k}{m+1}\\frac{1-p^{2(m+1)}}{1-p^2}+\\frac{k}{m+1}\\frac{1-p^{m+1}}{1-p}\\right) + \n",
+      "    \\left(\\lambda(m+1)\\Delta t\\right)^2\\left(\\frac{k}{m+1}\\frac{1-p^{m+1}}{1-p}\\right)^2\\right) \\\\\n",
+      " &= h^2\\left(\\lambda\\Delta t\\left((k^2-k)\\frac{1-p^{2(m+1)}}{1-p^2}+k\\frac{1-p^{m+1}}{1-p}\\right) + \n",
+      "    \\left(\\lambda\\Delta t\\right)^2\\left(k\\frac{1-p^{m+1}}{1-p}\\right)^2\\right). \\\\\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Substituting $h=\\frac{1-p}{k\\Delta t}$,"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# generate data"
+      "%%latex\n",
+      "\n",
+      "\\begin{align}\n",
+      "E\\left[S^2\\right] &= h^2\\left(\\lambda\\Delta t\\left((k^2-k)\\frac{1-p^{2(m+1)}}{1-p^2}+k\\frac{1-p^{m+1}}{1-p}\\right) + \n",
+      "    \\left(\\lambda\\Delta t\\right)^2\\left(k\\frac{1-p^{m+1}}{1-p}\\right)^2\\right) \\\\\n",
+      " &= \\left(\\frac{1-p}{k\\Delta t}\\right)^2\\left(\\lambda\\Delta t\\left((k^2-k)\\frac{1-p^{2(m+1)}}{1-p^2}+k\\frac{1-p^{m+1}}{1-p}\\right) + \n",
+      "    \\left(\\lambda\\Delta t\\right)^2\\left(k\\frac{1-p^{m+1}}{1-p}\\right)^2\\right) \\\\\n",
+      " &= \\left(\\frac{1-p}{k\\Delta t}\\right)^2\\left((k^2-k)\\lambda\\Delta t\\frac{1-p^{2(m+1)}}{1-p^2}+k\\lambda\\Delta t\\frac{1-p^{m+1}}{1-p} + \n",
+      "    (\\lambda\\Delta t)^2\\left(k\\frac{1-p^{m+1}}{1-p}\\right)^2\\right) \\\\\n",
+      " &= \\frac{(1-p)^2(k^2-k)\\lambda}{k^2\\Delta t}\\frac{1-p^{2(m+1)}}{1-p^2}+\\frac{(1-p)^2\\lambda}{k\\Delta t}\\frac{1-p^{m+1}}{1-p} + \n",
+      "    \\lambda^2\\left(1-p^{m+1}\\right)^2. \\\\\n",
+      "\\end{align}"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "outputs": [
+      {
+       "latex": [
+        "\n",
+        "\\begin{align}\n",
+        "E\\left[S^2\\right] &= h^2\\left(\\lambda\\Delta t\\left((k^2-k)\\frac{1-p^{2(m+1)}}{1-p^2}+k\\frac{1-p^{m+1}}{1-p}\\right) + \n",
+        "    \\left(\\lambda\\Delta t\\right)^2\\left(k\\frac{1-p^{m+1}}{1-p}\\right)^2\\right) \\\\\n",
+        " &= \\left(\\frac{1-p}{k\\Delta t}\\right)^2\\left(\\lambda\\Delta t\\left((k^2-k)\\frac{1-p^{2(m+1)}}{1-p^2}+k\\frac{1-p^{m+1}}{1-p}\\right) + \n",
+        "    \\left(\\lambda\\Delta t\\right)^2\\left(k\\frac{1-p^{m+1}}{1-p}\\right)^2\\right) \\\\\n",
+        " &= \\left(\\frac{1-p}{k\\Delta t}\\right)^2\\left((k^2-k)\\lambda\\Delta t\\frac{1-p^{2(m+1)}}{1-p^2}+k\\lambda\\Delta t\\frac{1-p^{m+1}}{1-p} + \n",
+        "    (\\lambda\\Delta t)^2\\left(k\\frac{1-p^{m+1}}{1-p}\\right)^2\\right) \\\\\n",
+        " &= \\frac{(1-p)^2(k^2-k)\\lambda}{k^2\\Delta t}\\frac{1-p^{2(m+1)}}{1-p^2}+\\frac{(1-p)^2\\lambda}{k\\Delta t}\\frac{1-p^{m+1}}{1-p} + \n",
+        "    \\lambda^2\\left(1-p^{m+1}\\right)^2. \\\\\n",
+        "\\end{align}"
+       ],
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "<IPython.core.display.Latex at 0x16f9f10>"
+       ]
+      }
+     ],
+     "prompt_number": 27
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Taking the limit yields\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\lim_{m\\rightarrow\\infty}E[S] &= \n",
+      "    \\lim_{m\\rightarrow\\infty}\\left(\\frac{(1-p)^2(k^2-k)\\lambda}{k^2\\Delta t}\\frac{1-p^{2(m+1)}}{1-p^2}+\n",
+      "    \\frac{(1-p)^2\\lambda}{k\\Delta t}\\frac{1-p^{m+1}}{1-p} + \n",
+      "    \\lambda^2\\left(1-p^{m+1}\\right)^2\\right) \\\\\n",
+      " &= \\frac{(1-p)^2(k^2-k)\\lambda}{k^2\\Delta t}\\frac{1}{1-p^2}+\n",
+      "    \\frac{(1-p)\\lambda}{k\\Delta t} + \\lambda^2.\n",
+      "\\end{align}"
+     ]
     }
    ],
    "metadata": {}
