finish stochastic variance derivation

--- a/synapse/DigitalSynapse_SNR.ipynb
+++ b/synapse/DigitalSynapse_SNR.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8f65bda2943c5a3ac2be9deea6c63251210eb5f081bdb7130de8b5d092cdb325"
+  "signature": "sha256:4e0c32aff70b90070aa256800bf07cebcc3cc88e250eca054a2ce207c0c23f8f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -541,20 +541,25 @@
      "metadata": {},
      "source": [
       "$$\n",
-      "\\text{var}(S)=E\\left[S^2\\right]-E[S]^2\n",
+      "\\text{var}(S)=E[S^2]-E[S]^2\n",
       "$$\n",
       "\n",
-      "We know $E[S]$, so we need to find $E\\left[S^2\\right]$\n",
+      "We know $E[S]$, so we need to find $E[S^2]$\n",
       "\n",
       "\\begin{align}\n",
-      "E\\left[S^2\\right] &= E\\left[\\left(h\\sum_{i=1}^{N}D[n_i]\\right)^2\\right] \\\\\n",
+      "E[S^2] &= E\\left[\\left(h\\sum_{i=1}^{N}D[n_i]\\right)^2\\right] \\\\\n",
       " &= h^2E\\left[\\left(\\sum_{i=1}^{N}D[n_i]\\right)^2\\right] \\\\\n",
       " &= h^2E\\left[(D[n_1]+D[n_2]+\\ldots+D[n_N])(D[n_1]+D[n_2]+\\ldots+D[n_N])\\right] \\\\ \n",
       " &= h^2E\\left[\\sum_{i=1}^{N}D[n_i]^2+\\sum_{x=1}^{N}\\sum_{y=1,\\ y\\neq x}^{N}D[n_x]D[n_y]\\right] \\\\\n",
       " &= h^2\\left(E\\left[\\sum_{i=1}^{N}D[n_i]^2\\right]+E\\left[\\sum_{x=1}^{N}\\sum_{y=1,\\ y\\neq x}^{N}D[n_x]D[n_y]\\right]\\right) \\\\\n",
       " &= h^2\\left(E\\left[E\\left[\\sum_{i=1}^{N}D[n_i]^2\\bigg|N\\right]\\right]+\n",
       "    E\\left[E\\left[\\sum_{x=1}^{N}\\sum_{y=1,\\ y\\neq x}^{N}D[n_x]D[n_y]\\bigg|N\\right]\\right]\\right) \\\\\n",
+      " &= h^2\\left(E\\left[\\sum_{i=1}^{N}E\\left[D[n_i]^2\\bigg|N\\right]\\right]+\n",
+      "    E\\left[\\sum_{x=1}^{N}\\sum_{y=1,\\ y\\neq x}^{N}E\\left[D[n_x]D[n_y]\\bigg|N\\right]\\right]\\right) \\\\\n",
+      " &= h^2\\left(E\\left[\\sum_{i=1}^{N}1\\right]E\\left[D[n_i]^2\\bigg|N\\right]+\n",
+      "    E\\left[\\sum_{x=1}^{N}\\sum_{y=1,\\ y\\neq x}^{N}1\\right]E\\left[D[n_x]D[n_y]\\bigg|N\\right]\\right) \\\\\n",
       " &= h^2\\left(E[N]E\\left[D[n_i]^2\\right] + E\\left[N^2-N\\right]E[D[n_x]D[n_y]]\\right) \\\\\n",
+      " &= h^2\\left(E[N]E\\left[D[n_i]^2\\right] + E\\left[N^2-N\\right]E[D[n_x]]E[D[n_y]]\\right) \\\\\n",
       " &= h^2\\left(E[N]E\\left[E\\left[D[n_i]^2\\bigg|n_i\\right]\\right] + \n",
       "    \\left(E\\left[N^2\\right]-\n",
       "    E[N]\\right)E\\left[E\\left[D[n_x]\\bigg|n_x\\right]\\right]E\\left[E\\left[D[n_y]\\bigg|n_y\\right]\\right]\\right) \\\\\n",
@@ -572,7 +577,7 @@
      "metadata": {},
      "source": [
       "\\begin{align}\n",
-      "E\\left[S^2\\right] &= h^2\\left(E[N]E\\left[E\\left[D[n_i]^2\\bigg|n_i\\right]\\right] + \n",
+      "E[S^2] &= h^2\\left(E[N]E\\left[E\\left[D[n_i]^2\\bigg|n_i\\right]\\right] + \n",
       "    \\left(E\\left[N^2\\right]-\n",
       "    E[N]\\right)E\\left[E\\left[D[n_x]\\bigg|n_x\\right]\\right]E\\left[E\\left[D[n_y]\\bigg|n_y\\right]\\right]\\right) \\\\\n",
       " &= h^2\\left(\\lambda(m+1)\\Delta tE\\left[(k^2-k)p^{2n_i}+kp^{n_i}\\right] + \n",
@@ -581,7 +586,7 @@
       "    \\left(\\lambda(m+1)\\Delta t\\right)^2\\left(\\frac{k}{m+1}\\frac{1-p^{m+1}}{1-p}\\right)^2\\right) \\\\\n",
       " &= h^2\\left(\\lambda(m+1)\\Delta t\\left(\\frac{k^2-k}{m+1}\\frac{1-p^{2(m+1)}}{1-p^2}+\\frac{k}{m+1}\\frac{1-p^{m+1}}{1-p}\\right) + \n",
       "    \\left(\\lambda(m+1)\\Delta t\\right)^2\\left(\\frac{k}{m+1}\\frac{1-p^{m+1}}{1-p}\\right)^2\\right) \\\\\n",
-      " &= h^2\\left(\\lambda\\Delta t\\left((k^2-k)\\frac{1-p^{2(m+1)}}{1-p^2}+k\\frac{1-p^{m+1}}{1-p}\\right) + \n",
+      " &= h^2\\left(\\lambda\\Delta t(k^2-k)\\frac{1-p^{2(m+1)}}{1-p^2}+\\lambda\\Delta tk\\frac{1-p^{m+1}}{1-p} + \n",
       "    \\left(\\lambda\\Delta t\\right)^2\\left(k\\frac{1-p^{m+1}}{1-p}\\right)^2\\right). \\\\\n",
       "\\end{align}"
      ]
@@ -594,47 +599,22 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "%%latex\n",
-      "\n",
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "\\begin{align}\n",
-      "E\\left[S^2\\right] &= h^2\\left(\\lambda\\Delta t\\left((k^2-k)\\frac{1-p^{2(m+1)}}{1-p^2}+k\\frac{1-p^{m+1}}{1-p}\\right) + \n",
+      "E[S^2] &= h^2\\left(\\lambda\\Delta t(k^2-k)\\frac{1-p^{2(m+1)}}{1-p^2}+\\lambda\\Delta tk\\frac{1-p^{m+1}}{1-p} + \n",
       "    \\left(\\lambda\\Delta t\\right)^2\\left(k\\frac{1-p^{m+1}}{1-p}\\right)^2\\right) \\\\\n",
-      " &= \\left(\\frac{1-p}{k\\Delta t}\\right)^2\\left(\\lambda\\Delta t\\left((k^2-k)\\frac{1-p^{2(m+1)}}{1-p^2}+k\\frac{1-p^{m+1}}{1-p}\\right) + \n",
-      "    \\left(\\lambda\\Delta t\\right)^2\\left(k\\frac{1-p^{m+1}}{1-p}\\right)^2\\right) \\\\\n",
-      " &= \\left(\\frac{1-p}{k\\Delta t}\\right)^2\\left((k^2-k)\\lambda\\Delta t\\frac{1-p^{2(m+1)}}{1-p^2}+k\\lambda\\Delta t\\frac{1-p^{m+1}}{1-p} + \n",
+      " &= \\left(\\frac{1-p}{k\\Delta t}\\right)^2\\left(\\lambda\\Delta t(k^2-k)\\frac{1-p^{2(m+1)}}{1-p^2}+\\lambda\\Delta tk\\frac{1-p^{m+1}}{1-p} + \n",
       "    (\\lambda\\Delta t)^2\\left(k\\frac{1-p^{m+1}}{1-p}\\right)^2\\right) \\\\\n",
-      " &= \\frac{(1-p)^2(k^2-k)\\lambda}{k^2\\Delta t}\\frac{1-p^{2(m+1)}}{1-p^2}+\\frac{(1-p)^2\\lambda}{k\\Delta t}\\frac{1-p^{m+1}}{1-p} + \n",
+      " &= \\frac{(1-p)^2\\lambda(k^2-k)}{k^2\\Delta t}\\frac{1-p^{2(m+1)}}{1-p^2}+\n",
+      "    \\frac{(1-p)^2\\lambda}{k\\Delta t}\\frac{1-p^{m+1}}{1-p} + \n",
+      "    \\lambda^2\\left(1-p^{m+1}\\right)^2 \\\\\n",
+      " &= \\frac{(1-p)^2\\lambda(k^2-k)}{k^2\\Delta t}\\frac{1-p^{2(m+1)}}{1-p^2}+\n",
+      "    \\frac{(1-p)\\lambda}{k\\Delta t}\\left(1-p^{m+1}\\right) + \n",
       "    \\lambda^2\\left(1-p^{m+1}\\right)^2. \\\\\n",
       "\\end{align}"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "latex": [
-        "\n",
-        "\\begin{align}\n",
-        "E\\left[S^2\\right] &= h^2\\left(\\lambda\\Delta t\\left((k^2-k)\\frac{1-p^{2(m+1)}}{1-p^2}+k\\frac{1-p^{m+1}}{1-p}\\right) + \n",
-        "    \\left(\\lambda\\Delta t\\right)^2\\left(k\\frac{1-p^{m+1}}{1-p}\\right)^2\\right) \\\\\n",
-        " &= \\left(\\frac{1-p}{k\\Delta t}\\right)^2\\left(\\lambda\\Delta t\\left((k^2-k)\\frac{1-p^{2(m+1)}}{1-p^2}+k\\frac{1-p^{m+1}}{1-p}\\right) + \n",
-        "    \\left(\\lambda\\Delta t\\right)^2\\left(k\\frac{1-p^{m+1}}{1-p}\\right)^2\\right) \\\\\n",
-        " &= \\left(\\frac{1-p}{k\\Delta t}\\right)^2\\left((k^2-k)\\lambda\\Delta t\\frac{1-p^{2(m+1)}}{1-p^2}+k\\lambda\\Delta t\\frac{1-p^{m+1}}{1-p} + \n",
-        "    (\\lambda\\Delta t)^2\\left(k\\frac{1-p^{m+1}}{1-p}\\right)^2\\right) \\\\\n",
-        " &= \\frac{(1-p)^2(k^2-k)\\lambda}{k^2\\Delta t}\\frac{1-p^{2(m+1)}}{1-p^2}+\\frac{(1-p)^2\\lambda}{k\\Delta t}\\frac{1-p^{m+1}}{1-p} + \n",
-        "    \\lambda^2\\left(1-p^{m+1}\\right)^2. \\\\\n",
-        "\\end{align}"
-       ],
-       "metadata": {},
-       "output_type": "display_data",
-       "text": [
-        "<IPython.core.display.Latex at 0x16f9f10>"
-       ]
-      }
-     ],
-     "prompt_number": 27
+     ]
     },
     {
      "cell_type": "markdown",
@@ -643,12 +623,27 @@
       "Taking the limit yields\n",
       "\n",
       "\\begin{align}\n",
-      "\\lim_{m\\rightarrow\\infty}E[S] &= \n",
-      "    \\lim_{m\\rightarrow\\infty}\\left(\\frac{(1-p)^2(k^2-k)\\lambda}{k^2\\Delta t}\\frac{1-p^{2(m+1)}}{1-p^2}+\n",
-      "    \\frac{(1-p)^2\\lambda}{k\\Delta t}\\frac{1-p^{m+1}}{1-p} + \n",
+      "\\lim_{m\\rightarrow\\infty}E[S^2] &= \n",
+      "    \\lim_{m\\rightarrow\\infty}\\left(\\frac{(1-p)^2\\lambda(k^2-k)}{k^2\\Delta t}\\frac{1-p^{2(m+1)}}{1-p^2}+\n",
+      "    \\frac{(1-p)\\lambda}{k\\Delta t}\\left(1-p^{m+1}\\right) + \n",
       "    \\lambda^2\\left(1-p^{m+1}\\right)^2\\right) \\\\\n",
-      " &= \\frac{(1-p)^2(k^2-k)\\lambda}{k^2\\Delta t}\\frac{1}{1-p^2}+\n",
+      " &= \\frac{(1-p)^2\\lambda(k^2-k)}{k^2\\Delta t}\\frac{1}{1-p^2}+\n",
       "    \\frac{(1-p)\\lambda}{k\\Delta t} + \\lambda^2.\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Therefore,\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\text{var}(S) &= E[S^2]-E[S]^2 \\\\\n",
+      " &= \\frac{(1-p)^2\\lambda(k^2-k)}{k^2\\Delta t}\\frac{1}{1-p^2}+\n",
+      "    \\frac{(1-p)\\lambda}{k\\Delta t} + \\lambda^2 - \\lambda^2 \\\\\n",
+      " &= \\frac{(1-p)^2\\lambda(k^2-k)}{k^2\\Delta t}\\frac{1}{1-p^2}+\n",
+      "    \\frac{(1-p)\\lambda}{k\\Delta t}.\n",
       "\\end{align}"
      ]
     }
