continue variance calculation

--- a/synapse/DigitalSynapse_SNR.ipynb
+++ b/synapse/DigitalSynapse_SNR.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4e0c32aff70b90070aa256800bf07cebcc3cc88e250eca054a2ce207c0c23f8f"
+  "signature": "sha256:6bf7363307583f3ae880537debddec4cf72bfd2350e8ea30ac32e495649c2235"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -643,8 +643,54 @@
       " &= \\frac{(1-p)^2\\lambda(k^2-k)}{k^2\\Delta t}\\frac{1}{1-p^2}+\n",
       "    \\frac{(1-p)\\lambda}{k\\Delta t} + \\lambda^2 - \\lambda^2 \\\\\n",
       " &= \\frac{(1-p)^2\\lambda(k^2-k)}{k^2\\Delta t}\\frac{1}{1-p^2}+\n",
-      "    \\frac{(1-p)\\lambda}{k\\Delta t}.\n",
+      "    \\frac{(1-p)\\lambda}{k\\Delta t} \\\\\n",
+      " &= \\frac{(1-p)^2\\lambda(k^2-k)}{k^2\\Delta t}\\frac{1}{(1-p)(1+p)}+\n",
+      "    \\frac{(1-p)\\lambda}{k\\Delta t} \\\\\n",
+      " &= \\frac{(1-p)\\lambda(k^2-k)}{k^2\\Delta t}\\frac{1}{(1+p)}+\n",
+      "    \\frac{(1-p)\\lambda}{k\\Delta t} \\\\\n",
+      " &= \\frac{\\lambda}{k}\\left(\\frac{(1-p)}{(1+p)}\\frac{(k-1)}{\\Delta t}+\n",
+      "    \\frac{(1-p)}{\\Delta t}\\right) \\\\\n",
       "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Since $p=e^{-\\Delta t/\\tau}$, we can approximate $p\\approx 1-\\frac{\\Delta t}{\\tau}$\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\text{var}(S) &= \\frac{\\lambda}{k}\\left(\\frac{(1-p)}{(1+p)}\\frac{(k-1)}{\\Delta t}+\n",
+      "    \\frac{(1-p)}{\\Delta t}\\right) \\\\\n",
+      " &\\approx \\frac{\\lambda}{k}\\left(\\frac{\\Delta t/\\tau}{(1+p)}\\frac{(k-1)}{\\Delta t}+\n",
+      "    \\frac{\\Delta t/\\tau}{\\Delta t}\\right) \\\\\n",
+      " &= \\frac{\\lambda}{k\\tau}\\left(\\frac{k-1}{1+p}+ 1\\right) \\\\\n",
+      " &= \\frac{\\lambda}{k\\tau}\\left(\\frac{k+p}{1+p}\\right) \\\\\n",
+      " &= \\frac{\\lambda}{\\tau}\\left(\\frac{1+p/k}{1+p}\\right) \\\\\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "To build some intution, when $\\Delta t\\rightarrow 0$, $p\\rightarrow 1$ and \n",
+      "\n",
+      "$$\n",
+      "\\text{var}(S) = \\frac{\\lambda}{\\tau}\\left(\\frac{1+1/k}{2}\\right),\n",
+      "$$\n",
+      "\n",
+      "and now if $k\\rightarrow \\infty$ as well,\n",
+      "\n",
+      "$$\n",
+      "\\text{var}(S) = \\frac{\\lambda}{2\\tau},\n",
+      "$$\n",
+      "\n",
+      "which matches the result for the continuous synapse. In terms of the original user parameters,\n",
+      "\n",
+      "$$\n",
+      "\\text{var}(S) = \\frac{\\lambda}{\\tau}\\left(\\frac{1+e^{\\Delta t/\\tau}/k}{1+e^{\\Delta t/\\tau}}\\right)\n",
+      "$$"
      ]
     }
    ],
