--- a/synapse/DigitalSynapse.ipynb
+++ b/synapse/DigitalSynapse.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:39c1937a9951aa1a20346c65fc052160feb7d9f3562ba5e7a57cfb3a80b09f81"
+  "signature": "sha256:76214b76e5a6d99e0043090d52d20d3591de7a594a0f3936fff7782a7fcd8914"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -21,34 +21,87 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Using matplotlib backend: TkAgg\n",
+        "Using matplotlib backend: Qt4Agg\n",
         "Populating the interactive namespace from numpy and matplotlib\n"
        ]
       }
      ],
-     "prompt_number": 28
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "class NeuronSynapse:\n",
-      "    def __init__(self):\n",
-      "        self.u = 0           # u is the local synaptic state\n",
-      "        self.K = 5           # K is the spike multiplier (input)\n",
-      "        self.w = 2000        # w is the weight: scale factor\n",
-      "        self.syntau = 10000  # synapse tau, in microseconds\n",
-      "        \n",
-      "        self.dt = 100        # dt = integration time step, in microseconds\n",
+      "class Neuron(object):\n",
+      "    def __init__(self, dt=100):\n",
+      "        self.tscale = 1e-6   # units of time (s)\n",
+      "        self.dt = dt         # dt = integration time step, in tscale\n",
       "        self.updatetime = 0  # last update time\n",
-      "        \n",
-      "        self.syn = 0.0\n",
+      "\n",
+      "        self.u = 0           # u is the internal synaptic state\n",
+      "        self.w = .004           # w is the weight: scale factor\n",
+      "        self.syntau = 10000  # synapse tau, in tscale\n",
+      "        self.syn = 0.0       # syn is the synaptic input current to the soma\n",
       "        \n",
       "        self.x = 0.0         # neuron state\n",
       "        self.neutau = 5000   # time scale of neuron integration in microseconds\n",
       "        self.threshold = 10  # spiking threshold for neuron state x\n",
       "        \n",
-      "        self.digital = False\n",
+      "        # override all the soma computation, just use constant inputs\n",
+      "        self.override = False\n",
+      "        \n",
+      "    def reset(self):\n",
+      "        self.u = 0\n",
+      "        self.updatetime = 0\n",
+      "        self.x = 0.\n",
+      "        self.syn = 0.\n",
+      "        \n",
+      "    def debug_syn(self,incur):\n",
+      "        self.override = True\n",
+      "        self.incur = incur\n",
+      "\n",
+      "    def debug_stop(self):\n",
+      "        self.override = False\n",
+      "        \n",
+      "    # call if a spike arrives\n",
+      "    def inspike(self):\n",
+      "        self.u = self.u + 1\n",
+      "    \n",
+      "    # return 1 if there is a spike, 0 if there isn't.\n",
+      "    def step(self, curtime):\n",
+      "        if self.updatetime > curtime: return 0\n",
+      "        self.updatetime = self.updatetime + self.dt\n",
+      "        \n",
+      "        self.step_syn()\n",
+      "        self.step_soma()\n",
+      "       \n",
+      "        # spike detect\n",
+      "        if self.x > self.threshold:\n",
+      "            self.x = 0.0\n",
+      "            return 1\n",
+      "        else:\n",
+      "            return 0\n",
+      "    \n",
+      "    def step_syn(self):\n",
+      "        # synaptic update\n",
+      "        self.syn = self.syn - self.syn*float(self.dt)/self.syntau + self.w*float(self.u)/self.syntau/self.tscale\n",
+      "        self.u = 0\n",
+      "        \n",
+      "    def step_soma(self):\n",
+      "        # neuron update\n",
+      "        syn = self.incur if self.override else self.syn\n",
+      "        self.x = self.x + float(self.dt)/self.neutau*(0.5*(self.x**2) - self.x + syn)\n",
+      "                \n",
+      "    def readneuron(self):\n",
+      "        return self.x\n",
+      "    \n",
+      "    def readpostsyn(self):\n",
+      "        return self.syn\n",
+      "\n",
+      "\n",
+      "class DigitalNeuron(Neuron):\n",
+      "    def __init__(self, dt=100):\n",
+      "        super(DigitalNeuron, self).__init__(dt)\n",
       "        \n",
       "        # synapse digitization\n",
       "        self.synibits = 4    # 4 bits for integer component\n",
@@ -58,126 +111,164 @@
       "        self.neuibits = 4\n",
       "        self.neufbits = 12\n",
       "        \n",
-      "        self.stochastic = False\n",
-      "        \n",
-      "        # override all the soma computation, just use constant inputs\n",
-      "        self.override = False\n",
-      "\n",
-      "        self.reset()\n",
-      "        \n",
-      "    # call to re-initialize\n",
-      "    def reset(self):\n",
-      "        self.u = 0\n",
-      "        self.updatetime = 0\n",
-      "        self.x = 0\n",
-      "        self.syn = 0\n",
-      "        self.pr = (self.dt+0.0)/(self.syntau)\n",
-      "        #self.pr = self.pr/(1+self.pr)\n",
-      "        \n",
-      "    def debug_syn(self,incur):\n",
-      "        self.override = True\n",
-      "        self.incur = incur\n",
-      "        \n",
-      "        \n",
-      "    def digital_mode(self,val):\n",
-      "        if val:\n",
-      "            self.digital = True\n",
-      "        else:\n",
-      "            self.digital = False\n",
-      "            \n",
       "    def digitize (self,x,ibits,fbits):\n",
       "        y = x*(1<<fbits)\n",
       "        y = y % (1 << (fbits + ibits))\n",
       "        return (int(y)+0.0)/(1<<fbits)\n",
+      "    \n",
+      "    def step_syn(self):\n",
+      "        super(DigitalNeuron, self).step_syn()\n",
+      "        self.syn = self.digitize(self.syn, self.synibits, self.synfbits)\n",
       "        \n",
-      "    def stochastic_mode(self,val):\n",
-      "        if val: \n",
-      "            self.stochastic = True\n",
-      "        else: \n",
-      "            self.stochastic = False\n",
+      "    def step_soma(self):\n",
+      "        super(DigitalNeuron, self).step_soma()\n",
+      "        self.x = self.digitize(self.x, self.neuibits, self.neufbits)\n",
+      "\n",
+      "\n",
+      "class StochasticNeuron(DigitalNeuron):\n",
+      "    def __init__(self, dt=100, k=5):\n",
+      "        super(StochasticNeuron, self).__init__(dt)\n",
+      "        self.k = k  # number of increments to apply when spike arrives\n",
+      "        #self.pr = (self.dt+0.0)/(self.syntau)\n",
       "        \n",
-      "    def debug_stop(self):\n",
-      "        self.override = False\n",
-      "        \n",
-      "    # call if a spike arrives\n",
+      "        self.pr = np.exp(-float(self.dt)/self.syntau)\n",
+      "        self.synscale = (1.-self.pr)/(self.k*float(dt)*self.tscale)\n",
+      "        print self.pr, self.synscale\n",
+      "    \n",
       "    def inspike(self):\n",
-      "        if self.stochastic:\n",
-      "            self.u = self.u + self.K\n",
-      "        else:\n",
-      "            self.u = self.u + 1\n",
-      "    \n",
-      "    # run one time step.\n",
-      "    # return 1 if there is a spike, 0 if there isn't.\n",
-      "    def step(self,curtime):\n",
-      "        if self.updatetime > curtime: return 0\n",
-      "\n",
-      "        self.updatetime = self.updatetime + self.dt\n",
-      "                \n",
-      "        # synaptic update\n",
-      "        if self.stochastic:\n",
-      "            for i in range(self.u):\n",
-      "                if random.uniform(0,1) < self.pr:\n",
-      "                    self.u = self.u-1\n",
-      "                \n",
-      "            incur = (self.u*self.w + 0.0)/(0.0+self.K)*self.dt/(0.0+self.syntau)\n",
-      "            if self.digital:\n",
-      "                incur = self.digitize(incur, self.synibits, self.synfbits)\n",
-      "        else:\n",
-      "            self.syn = self.syn + (self.u*self.w - self.syn)*(0.0+self.dt)/self.syntau\n",
-      "            self.u = 0\n",
-      "            incur = self.syn\n",
-      "            if self.digital:\n",
-      "                self.syn = self.digitize (self.syn,self.synibits,self.synfbits)\n",
-      "                #print 'old=', incur, '; new=', self.syn\n",
-      "                \n",
-      "        if self.override: incur = self.incur\n",
-      "            \n",
-      "        # neuron update\n",
-      "        self.x = self.x + (0.0+self.dt)/self.neutau*(0.5*(self.x**2)-self.x+incur)\n",
+      "        self.u = self.u + self.k\n",
       "        \n",
-      "        if self.digital:\n",
-      "            self.x = self.digitize (self.x,self.neuibits,self.neufbits)\n",
-      "        \n",
-      "        if self.x > self.threshold: # spike detect\n",
-      "            self.x = 0.0\n",
-      "            return 1\n",
-      "        else:\n",
-      "            return 0\n",
-      "\n",
-      "    def readtime(self):\n",
-      "        return self.updatetime - self.dt\n",
-      "    \n",
-      "    def readpostsyn(self):\n",
-      "        if self.stochastic:\n",
-      "            return (self.u*self.w)/(0.0+self.K)*self.dt/(0.0+self.syntau)\n",
-      "        else:\n",
-      "            return self.syn\n",
-      "    \n",
-      "    def readneuron(self):\n",
-      "        return self.x\n"
+      "    def step_syn(self):\n",
+      "        self.u -= sum(np.random.rand(self.u) > self.pr)\n",
+      "        self.syn = self.w*self.u*self.synscale\n",
+      "        self.syn = self.digitize(self.syn, self.synibits, self.synfbits)\n",
+      "        "
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 29
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "class SpikeGen:\n",
-      "    def __init__(self):\n",
-      "        self.interval = 5000 # inter-spike interval (in microseconds)\n",
+      "class SpikeGen(object):\n",
+      "    def __init__(self, interval=5000):\n",
+      "        self.interval = interval # inter-spike interval (in microseconds)\n",
       "        self.updatetime = 0  # next update time\n",
       "        \n",
       "    def reset(self):\n",
       "        self.updatetime = 0\n",
       "        \n",
-      "    def step(self,curtime):\n",
+      "    def step(self, curtime):\n",
       "        if curtime < self.updatetime: return 0\n",
       "        self.updatetime = self.updatetime + self.interval\n",
-      "\n",
       "        return 1"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "t=0\n",
+      "exp_dt = 1e-6\n",
+      "nsteps = int(1e5)\n",
+      "time = exp_dt * np.arange(nsteps)\n",
+      "n_analog = Neuron(dt=4)\n",
+      "n_digital = DigitalNeuron(dt=4)\n",
+      "n_stochastic = StochasticNeuron(dt=4, k=4)\n",
+      "\n",
+      "n_analog.debug_syn(1.)\n",
+      "g = SpikeGen(2000)\n",
+      "\n",
+      "inspike = []\n",
+      "\n",
+      "# analog \n",
+      "x_a = np.zeros(nsteps)\n",
+      "incurrent_a = np.zeros(nsteps)\n",
+      "outspike_a = []\n",
+      "\n",
+      "# digital\n",
+      "x_d = np.zeros(nsteps)\n",
+      "outspike_d = []\n",
+      "incurrent_d = np.zeros(nsteps)\n",
+      "\n",
+      "# stochastic\n",
+      "x_s = np.zeros(nsteps)\n",
+      "outspike_s = []\n",
+      "incurrent_s = np.zeros(nsteps)\n",
+      "\n",
+      "for i in xrange(nsteps):\n",
+      "    x_a[i] = n_analog.readneuron()\n",
+      "    x_d[i] = n_digital.readneuron()\n",
+      "    x_s[i] = n_stochastic.readneuron()\n",
+      "\n",
+      "    incurrent_a[i] = n_analog.readpostsyn()\n",
+      "    incurrent_d[i] = n_digital.readpostsyn()\n",
+      "    incurrent_s[i] = n_stochastic.readpostsyn()\n",
+      "    if g.step(t) == 1: \n",
+      "        inspike.append(t*exp_dt)\n",
+      "        n_analog.inspike()\n",
+      "        n_digital.inspike()\n",
+      "        n_stochastic.inspike()\n",
+      "    if n_analog.step(t) == 1: outspike_a.append(t*exp_dt)\n",
+      "    if n_digital.step(t) == 1: outspike_d.append(t*exp_dt)\n",
+      "    if n_stochastic.step(t) == 1: outspike_s.append(t*exp_dt)\n",
+      "    t = t + 1"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.999600079989 24.9950006666\n"
+       ]
+      }
+     ],
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "figure('results', figsize=(8,6)).clf()\n",
+      "\n",
+      "ax = subplot(4, 1, 1)\n",
+      "ax.set_color_cycle(['r','g','b'])\n",
+      "x0 = plot(time, x_a)\n",
+      "x1 = plot(time, x_d)\n",
+      "x2 = plot(time, x_s)\n",
+      "#ax.legend((x0[0], x1[0], x2[0]), ('Analog', 'Digital', 'Stochastic'), loc=2)\n",
+      "title('Neuron state')\n",
+      "\n",
+      "ax = subplot(4,1,2)\n",
+      "ax.set_color_cycle(['r','g','b'])\n",
+      "plot(time, incurrent_a)\n",
+      "plot(time, incurrent_d)\n",
+      "plot(time, incurrent_s)\n",
+      "title('Synapse output')\n",
+      "\n",
+      "px = subplot(4,1,3, sharex = ax)\n",
+      "px.set_color_cycle(['r','g','b'])\n",
+      "px.stem(inspike, [1]*len(inspike))\n",
+      "title ('Input spikes')\n",
+      "\n",
+      "px = subplot(4,1,4, sharex=ax)\n",
+      "if len(outspike_a) != 0: px.stem(outspike_a, [1]*len(outspike_a), 'r', markerfmt='ro')\n",
+      "if len(outspike_d) != 0: px.stem(outspike_d, [0.75]*len(outspike_d), 'g', markerfmt='go')\n",
+      "if len(outspike_s) != 0: px.stem(outspike_s, [0.5]*len(outspike_s), 'b', markerfmt='bo')\n",
+      "title ('Output spikes')\n",
+      "xlabel('time(s)')\n",
+      "\n",
+      "tight_layout()\n",
+      "show()"
      ],
      "language": "python",
      "metadata": {},
@@ -199,7 +290,6 @@
       "        if n.step(tm) == 1: outcnt = outcnt + 1\n",
       "    return (0.0 + outcnt)/(0.0+tm)\n",
       "\n",
-      "\n",
       "def many_exp(n,inspk,tm,count):\n",
       "    x = 0\n",
       "    x2 = 0\n",
@@ -218,172 +308,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 31
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "t=0\n",
-      "r_total=range(int(1e5))\n",
-      "n_digital = NeuronSynapse()\n",
-      "n_analog = NeuronSynapse()\n",
-      "n_stochastic = NeuronSynapse()\n",
-      "g = SpikeGen()\n",
-      "\n",
-      "g.interval = 2500\n",
-      "\n",
-      "n_analog.dt = 4\n",
-      "n_digital.dt = 4\n",
-      "n_stochastic.dt = 4\n",
-      "\n",
-      "n_analog.stochastic_mode(False)\n",
-      "n_analog.digital_mode(False)\n",
-      "n_analog.reset()\n",
-      "\n",
-      "n_stochastic.K = 4\n",
-      "n_stochastic.stochastic_mode(True)\n",
-      "n_stochastic.digital_mode(True)\n",
-      "n_stochastic.reset()\n",
-      "\n",
-      "n_digital.stochastic_mode(False)\n",
-      "n_digital.digital_mode(True)\n",
-      "n_digital.reset()\n",
-      "\n",
-      "inspike = []\n",
-      "\n",
-      "# analog \n",
-      "outspike = []\n",
-      "incurrent = []\n",
-      "xvals = []\n",
-      "\n",
-      "# digital\n",
-      "outspike2 = []\n",
-      "incurrent2 = []\n",
-      "xvals2 = []\n",
-      "\n",
-      "# stochastic\n",
-      "outspike3 = []\n",
-      "incurrent3 = []\n",
-      "xvals3 = []\n",
-      "\n",
-      "for i in r_total:\n",
-      "    r_total[i] = 1e-3*r_total[i]\n",
-      "    xvals.append(n_analog.readneuron())\n",
-      "    xvals2.append(n_digital.readneuron())\n",
-      "    xvals3.append(n_stochastic.readneuron())\n",
-      "    incurrent.append (n_analog.readpostsyn())\n",
-      "    incurrent2.append (n_digital.readpostsyn())\n",
-      "    incurrent3.append (n_stochastic.readpostsyn())\n",
-      "    if g.step(t) == 1: \n",
-      "        inspike.append(t*1e-3)\n",
-      "        n_analog.inspike()\n",
-      "        n_digital.inspike()\n",
-      "        n_stochastic.inspike()\n",
-      "    if n_analog.step(t) == 1: outspike.append(t*1e-3)\n",
-      "    if n_digital.step(t) == 1: outspike2.append(t*1e-3)\n",
-      "    if n_stochastic.step(t) == 1: outspike3.append(t*1e-3)\n",
-      "    t = t + 1"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 32
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "subplots_adjust(hspace=0.8)\n",
-      "pl = subplot(4,1,1)\n",
-      "pl.set_color_cycle(['r','g','b'])\n",
-      "x0 = plot(r_total,xvals)\n",
-      "x1 = plot(r_total,xvals2)\n",
-      "x2 = plot(r_total,xvals3)\n",
-      "pl.legend((x0[0],x1[0],x2[0]), ('Analog', 'Digital', 'Stochastic'), loc=2)\n",
-      "title('Neuron x')\n",
-      "ax = subplot(4,1,2,sharex=pl)\n",
-      "ax.set_color_cycle(['r','g','b'])\n",
-      "plot(r_total,incurrent)\n",
-      "plot(r_total,incurrent2)\n",
-      "plot(r_total,incurrent3)\n",
-      "title('Synapse output')\n",
-      "px = subplot(4,1,3,sharex=pl)\n",
-      "px.set_color_cycle(['r','g','b'])\n",
-      "px.stem(inspike,[1]*len(inspike))\n",
-      "title ('Input spikes')\n",
-      "px = subplot(4,1,4, sharex=pl)\n",
-      "px.set_color_cycle(['r','g','b'])\n",
-      "if len(outspike) != 0: px.stem(outspike,[1]*len(outspike),linefmt='r',markerfmt='ro')\n",
-      "if len(outspike2) != 0: px.stem(outspike2,[0.75]*len(outspike2),linefmt='g',markerfmt='go')\n",
-      "if len(outspike3) != 0: px.stem(outspike3,[0.5]*len(outspike3),linefmt='b',markerfmt='bo')\n",
-      "title ('Output spikes')\n",
-      "show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 40
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#n = NeuronSynapse()\n",
-      "#g = SpikeGen()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 34
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#orate = []\n",
-      "#ovar = []\n",
-      "#rate = np.linspace(0.5e3,0.7e3,20)\n",
-      "##rate = [0.6e3]\n",
-      "#n.dt = 1\n",
-      "#n.K = 4\n",
-      "#n.stochastic_mode(False)\n",
-      "#n.digital_mode(False)\n",
-      "# for i in rate:\n",
-      "#     print 'Processing ', i, '...'\n",
-      "#     n.reset()\n",
-      "#     g.reset()\n",
-      "#     g.interval = int(1e6/i)  # interval set by i, the input firing rate\n",
-      "#     l = many_exp(n,g,int(1e6),1)\n",
-      "#     orate.append(l[0]*1e6)\n",
-      "#     ovar.append(l[1]*1e6)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 35
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# stem(rate,orate)\n",
-      "# show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 36
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 36
+     "outputs": []
     }
    ],
    "metadata": {}
