--- a/synapse/DigitalSynapse_SNR.ipynb
+++ b/synapse/DigitalSynapse_SNR.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6bf7363307583f3ae880537debddec4cf72bfd2350e8ea30ac32e495649c2235"
+  "signature": "sha256:e695e3158ec5ea3e8de7db185a5f4c56cec6898c0bb647a2b8b88898e4e9627a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -689,7 +689,7 @@
       "which matches the result for the continuous synapse. In terms of the original user parameters,\n",
       "\n",
       "$$\n",
-      "\\text{var}(S) = \\frac{\\lambda}{\\tau}\\left(\\frac{1+e^{\\Delta t/\\tau}/k}{1+e^{\\Delta t/\\tau}}\\right)\n",
+      "\\text{var}(S) = \\frac{\\lambda}{\\tau}\\left(\\frac{1+e^{-\\Delta t/\\tau}/k}{1+e^{-\\Delta t/\\tau}}\\right)\n",
       "$$"
      ]
     }
